<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jpiser.hubclient.presentation.features.main.view.MainActivity">

    <TextView
        android:id="@+id/hublabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:text="@string/main_selected_hub" />

    <TextView
        android:id="@+id/hubname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/hublabel"
        android:text="GitHub" />


    <EditText
        android:id="@+id/userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hublabel"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/main_prompt_enter_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userLogin"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:hint="@string/main_prompt_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        />

    <Button
        android:id="@+id/loadCredentialsButton"

        android:layout_below="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_go"/>



</RelativeLayout>
